# kakeibo

apps/api/: Cargo.toml
apps/api/src/: application.rs  domain.rs  main.rs
apps/api/src/api/: transactions.rs
apps/api/src/application/: commands.rs  queries.rs
apps/api/src/domain/: events.rs  transaction.rs
apps/api/src/infrastructure/: event_store.rs
